refactoring and new features
